Revert back to Swing